--- a/shippable.yml
+++ b/shippable.yml
@@ -27,6 +27,7 @@ env:
     - DATABASE_DIALECT=postgres
 
 before_script:
+  - psql -c 'CREATE DATABASE app_test;' -U postgres
   - mkdir -p shippable/testresults
   - mkdir -p shippable/codecoverage
   - which dropdb && dropdb -e --if-exists app_test
