--- a/shippable.yml
+++ b/shippable.yml
@@ -30,6 +30,7 @@ before_script:
   - psql -c 'CREATE DATABASE app_test;' -U postgres
   - mkdir -p shippable/testresults
   - mkdir -p shippable/codecoverage
+  - psql --version
   - which dropdb && dropdb -e --if-exists app_test
   - psql -c 'CREATE DATABASE app_test;' -U postgres
 
