--- a/shippable.yml
+++ b/shippable.yml
@@ -33,7 +33,7 @@ before_script:
   - mkdir -p shippable/codecoverage
   - firefox -v
   - echo $SHIPPABLE_POSTGRES_VERSION
-  - postgres -V
+  - locate bin/postgres
   - psql --version
   - which dropdb && dropdb -e --if-exists app_test
   - psql -c 'CREATE DATABASE app_test;' -U postgres
